fixing faulty code in stratified networks code and stratified network visualisation

--- a/code/06_Confirmatory-Network-Analysis.Rmd
+++ b/code/06_Confirmatory-Network-Analysis.Rmd
@@ -8,7 +8,7 @@ This is a replication of code for Confirmatory Network Analaysis from (Piazza et
 
 
 ```{r Setup}
-install.packages("bootnet")
+library("bootnet")
 library("bootnet")
 library("psychonetrics")
 ```
